// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayCard renders in expyrico 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#FAFAF8",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#FAFAF8",
          "borderRadius": 16,
          "padding": 18,
          "shadowColor": "rgba(44,44,40,0.10)",
          "shadowOffset": {
            "height": 6,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 16,
        }
      }
    >
      <Text>
        Hello
      </Text>
    </View>
  </View>
</View>
`;

exports[`ClayCard renders in expyricoDark 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#111512",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#191F1B",
          "borderRadius": 16,
          "padding": 18,
          "shadowColor": "rgba(0,0,0,0.34)",
          "shadowOffset": {
            "height": 8,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 20,
        }
      }
    >
      <Text>
        Hello
      </Text>
    </View>
  </View>
</View>
`;
